# rolly

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: allocation_scaling.rs  generate_flamecharts.rs  hot_path.rs  realistic_scenario.rs
docs/: article.md  benchmark-methodology.md  prd-ro11y-v1.md
docs/benchmarks/: benchmark_results.toml
docs/prds/: prd-rolly-v1.md  prd-rolly-v2.md  prd-rolly-v3.md
rolly/: Cargo.toml
rolly-monoio/: Cargo.toml
rolly-monoio/src/: exporter.rs  lib.rs
rolly-monoio/tests/: backpressure.rs  e2e.rs
rolly-tokio/: Cargo.toml
rolly-tokio/benches/: exporter_throughput.rs  generate_flamecharts.rs  hot_path.rs  realistic_scenario.rs
rolly-tokio/src/: exporter.rs  lib.rs
rolly-tokio/tests/: backpressure.rs  collector_roundtrip.rs  e2e.rs  exemplar_propagation.rs  init_and_guard.rs  sampling_zero_rate.rs  shutdown_flush.rs  vector_e2e.rs
rolly-tokio/tests/common/: mod.rs
rolly/benches/: baseline.toml  comparison_otel.rs  exporter_throughput.rs  generate_flamecharts.rs  hot_path.rs  metrics_encoding.rs  otlp_encoding.rs  proto_encoding.rs
rolly/src/: constants.rs  exporter.rs  lib.rs  metrics.rs  otlp_layer.rs  otlp_log.rs  otlp_metrics.rs  otlp_trace.rs  proto.rs  trace_id.rs  use_metrics.rs
rolly/tests/: backpressure.rs  collector_roundtrip.rs  e2e.rs  mutex_contention.rs  proptest_encoding.rs  sampling_concurrency.rs  vector-e2e.yaml  vector_e2e.rs  wire_compat.rs
rolly/tools/: render_baseline.rs
rolly/verification/: README.md
rolly/verification/fuzz/: Cargo.toml
rolly/verification/fuzz/fuzz_targets/: fuzz_encode_logs.rs  fuzz_encode_trace.rs  fuzz_hex_to_bytes_16.rs
specs/: README.md  exporter.cfg  metrics_registry.cfg  metrics_registry.tla
src/: constants.rs  exporter.rs  lib.rs  otlp_layer.rs  otlp_trace.rs  use_metrics.rs
src/tower/: request.rs
tests/: backpressure.rs  collector_roundtrip.rs  e2e.rs  otel-config.yaml  sampling_concurrency.rs  shutdown_flush.rs
tools/: render_baseline.rs
verification/specs/: exporter.tla
