[package]
name = "ro11y"
version = "0.2.0"
edition = "2021"
description = "Lightweight Rust observability. Hand-rolled OTLP protobuf over HTTP, built on tracing."
license = "MIT OR Apache-2.0"
repository = "https://github.com/l1x/ro11y"
keywords = ["observability", "tracing", "otlp", "telemetry", "protobuf"]
categories = ["development-tools::debugging", "development-tools::profiling"]
readme = "README.md"

[features]
default = ["tower"]
tower = ["dep:tower", "dep:http", "dep:pin-project-lite"]

[dependencies]
blake3 = "1"
bytes = "1"
http = { version = "1", optional = true }
pin-project-lite = { version = "0.2", optional = true }
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["sync", "time", "rt"] }
tower = { version = "0.5", optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "registry"] }
uuid = { version = "1", features = ["v4"] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util"] }
tower = { version = "0.5", features = ["util"] }
