[package]
name = "rolly-monoio"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Monoio-based transport for rolly observability. Exporter, init helpers, and TelemetryGuard."
keywords = ["observability", "tracing", "otlp", "telemetry", "monoio"]
categories = ["development-tools::debugging", "development-tools::profiling"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[features]
default = []
_bench = ["rolly/_bench"]

[dependencies]
rolly = { path = "../rolly", version = "=0.15.0" }
bytes = "1"
crossbeam-channel = "0.5"
monoio = { version = "0.2", features = ["macros", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "registry"] }
ureq = "3"

[dev-dependencies]
rolly = { path = "../rolly", version = "=0.15.0", features = ["_bench"] }
monoio = { version = "0.2", features = ["macros", "sync"] }
