[package]
name = "rolly-tokio"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Tokio-based transport for rolly observability. Exporter, init helpers, and TelemetryGuard."
keywords = ["observability", "tracing", "otlp", "telemetry", "tokio"]
categories = ["development-tools::debugging", "development-tools::profiling"]

[dependencies]
rolly = { path = "../rolly", version = "=0.11.0" }
bytes = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["sync", "time", "rt", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "registry"] }

[dev-dependencies]
rolly = { path = "../rolly", version = "=0.11.0", features = ["_bench"] }
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util"] }

[[bench]]
name = "exporter_throughput"
harness = false
