[package]
name = "rolly-tokio"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Tokio-based transport for rolly observability. Exporter, init helpers, and TelemetryGuard."
keywords = ["observability", "tracing", "otlp", "telemetry", "tokio"]
categories = ["development-tools::debugging", "development-tools::profiling"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[features]
default = []
_bench = ["rolly/_bench"]

[dependencies]
rolly = { path = "../rolly", version = "=0.11.0" }
bytes = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["sync", "time", "rt", "rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "registry"] }

[dev-dependencies]
rolly = { path = "../rolly", version = "=0.11.0", features = ["_bench"] }
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
inferno = "0.12"
opentelemetry = { version = "0.31", features = ["metrics"] }
opentelemetry_sdk = { version = "0.31", features = ["metrics", "rt-tokio", "experimental_metrics_custom_reader"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util"] }
toml = "0.8"

[[bench]]
name = "exporter_throughput"
harness = false
required-features = ["_bench"]

[[bench]]
name = "hot_path"
harness = false
required-features = ["_bench"]

[[bench]]
name = "realistic_scenario"
harness = false
required-features = ["_bench"]

[[bench]]
name = "generate_flamecharts"
harness = false
required-features = ["_bench"]
