[package]
name = "rolly"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Lightweight Rust observability. Hand-rolled OTLP protobuf over HTTP, built on tracing."
keywords = ["observability", "tracing", "otlp", "telemetry", "protobuf"]
categories = ["development-tools::debugging", "development-tools::profiling"]
readme = "../README.md"
exclude = [".agent-prompts/", ".claude/", "docs/prds/", "docker-compose.e2e.yaml", "mise.toml"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[features]
default = []
_bench = []   # expose internals for benchmarks; not part of public API

[dependencies]
blake3 = "1"
bytes = "1"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["sync", "time", "rt", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "registry"] }
uuid = { version = "1", features = ["v4"] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
opentelemetry = { version = "0.31", features = ["metrics"] }
opentelemetry_sdk = { version = "0.31", features = ["metrics", "rt-tokio", "experimental_metrics_custom_reader"] }
inferno = "0.12"
opentelemetry-proto = { version = "0.31", features = ["gen-tonic-messages"] }
proptest = "1"
prost = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
stats_alloc = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util"] }
toml = "0.8"

[[bench]]
name = "proto_encoding"
harness = false
required-features = ["_bench"]

[[bench]]
name = "otlp_encoding"
harness = false
required-features = ["_bench"]


[[bench]]
name = "metrics_encoding"
harness = false
required-features = ["_bench"]

[[bench]]
name = "realistic_scenario"
harness = false
required-features = ["_bench"]

[[bench]]
name = "comparison_otel"
harness = false
required-features = ["_bench"]

[[bench]]
name = "generate_flamecharts"
harness = false
required-features = ["_bench"]

[[bench]]
name = "allocation_scaling"
harness = false
required-features = ["_bench"]

[[bench]]
name = "hot_path"
harness = false
required-features = ["_bench"]

[[example]]
name = "render_baseline"
path = "tools/render_baseline.rs"
